Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1364

lfs 'poollist' is incorrectly recognised as 'pool_list' by lfs, the lfs manpage and the Manual.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0
    • None
    • None
    • 3
    • 4608

      The convention with lfs commands is that they do not have underscores in them. for example:

      lfs setstripe -d <dir>
      lfs osts [path]
      lfs poollist <filesystem>[.<pool>] | <pathname>
      lfs quota [-q] [-v] ...
      lfs quota -t <-u|-g> <filesystem>
      lfs quotacheck [-ug] <filesystem>
      lfs quotachown [-i] <filesystem>
      lfs quotaon [-ugf] <filesystem>
      lfs quotaoff [-ug] <filesystem>
      lfs quotainv [-ug] [-f] <filesystem>
      

      The lfs command currently wrongly requires a user to specify: pool_list.

      The inline-help, Manual and test scripts should be updated to make them consistent.

            bogl Bob Glossman (Inactive)
            rhenwood Richard Henwood (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: