LU-1364 utils: add lfs 'poollist' subcommand

Allow lfs to recognize 'poollist' and 'pool_list'
as valid alternate forms of the same command.

Signed-off-by: Bob Glossman <bogl@whamcloud.com>
Change-Id: I3f0a6692923e4ff8359afc8a3558ee404ffc4365